objects/ssot__BudgetAllocation__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__Amount__c</fullName>
        <label>Amount</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__BudgetCategoryValueId__c</fullName>
        <label>Budget Category Value</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BudgetId__c</fullName>
        <label>Budget</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FundingDisbursementId__c</fullName>
        <label>Funding Disbursement</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Budget Allocation Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Quantity__c</fullName>
        <label>Quantity</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__Status__c</fullName>
        <label>Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716670492707_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BudgetAllocation_FundingDisbursement_rel</label>
        <referenceTo>ssot__FundingAwardDisbursement__dlm</referenceTo>
        <relationshipLabel>BudgetAllocation_FundingDisbursement_rel</relationshipLabel>
        <relationshipName>rel_1716670492707_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716726627696_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BudgetAllocation_BudgetCategoryValue_rel</label>
        <referenceTo>ssot__BudgetCategoryValue__dlm</referenceTo>
        <relationshipLabel>BudgetAllocation_BudgetCategoryValue_rel</relationshipLabel>
        <relationshipName>rel_1716726627696_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716726640554_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BudgetAllocation_BudgetId_map_Budget_rel</label>
        <referenceTo>ssot__Budget__dlm</referenceTo>
        <relationshipLabel>BudgetAllocation_BudgetId_map_Budget_rel</relationshipLabel>
        <relationshipName>rel_1716726640554_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>